--- a/modules/openssl-nginx/templates/cert.cnf.erb
+++ b/modules/openssl-nginx/templates/cert.cnf.erb
@@ -44,7 +44,8 @@ extendedKeyUsage = "<%= @extkeyusage.collect! {|x| "#{x}" }.join(', ') -%>"
 <% end -%>
 
 [ alt_names ]
-DNS.1 = <%= @fqdn %>
-DNS.2 = *.<%= @fqdn %>
+<% @altnames.each_with_index do |host,index| -%>
+DNS.<%= (index * 2) + 1 %> = <%= host %>
+DNS.<%= (index * 2) + 2 %> = *.<%= host %>
+<% end -%>
 <% end %>
-
